# logik

./: .gitignore  README.md  pyproject.toml
.github/workflows/: lint.yml  regression.yml  wheels.yml
docs/source/: conf.py  external_links.rst  prerequisites.rst  sc_preparation.rst  tool_installations.rst
examples/adder/: adder.py  pin_constraints.py
examples/adder_vhdl/: adder.py  adder.vhd
examples/eth_mac_1g/: eth_mac_1g.py
examples/picorv32/: picorv32.py  picorv32.sdc  picorv32_z1015.py
examples/picorv32/constraints/z1015/: picorv32.pcf
examples/picorv32/constraints/z1062/: picorv32.pcf
logik/: __init__.py  _version.py  cli.py
logik/K4_N8_6x6_2_multisource_cad/: K4_N8_6x6.py  K4_N8_6x6.xml  K4_N8_6x6_bitstream_map.json  K4_N8_6x6_bitstream_x_y_map.json  K4_N8_6x6_constraint_map.json  K4_N8_6x6_yosys_config.json  tech_flops.v
logik/K4_N8_6x6_2_multisource_cad/techlib_custom_plugin/: dff.v  dffe.v  dffer.v  dffers.v  dffes.v  dffr.v  dffrs.v  dffs.v
logik/demo/: K4_N8_6x6.py  z1000.py
logik/devices/: logik_fpga.py
logik/flows/: logik_flow.py  logik_vhdl_flow.py
logik/flows/test/: logik_flow_no_timing.py
logik/tools/fasm_to_bitstream/: bitstream_bin_convert.py  bitstream_finish.py  fasm_to_bitstream.py
logik/z1000_cad/: tech_flops.lib  tech_flops_blackbox.v  z1000.py  z1000.xml  z1000_constraint_map.json  z1000_subarray_grid_map.csv  z1000_yosys_config.json
tests/: conftest.py  test_cli.py
tests/data/: z1000.py
tests/examples/: test_adder.py  test_eth_mac_1g.py  test_files.py  test_picorv32.py
