[build-system]
requires = [
    "setuptools >= 61.2",
    "setuptools_scm[toml] >= 6.2"
]

build-backend = "setuptools.build_meta"


[project]
name = "logik"
authors = [{name = "Zero ASIC"}]
description = "Logik is a light weight FPGA tool chain based on mature open source technologies."
readme = "README.md"
urls = {Homepage = "https://github.com/siliconcompiler/logik"}
requires-python = ">= 3.9"
dependencies = [
    "logiklib == 0.2.0",
    "siliconcompiler >= 0.35.1",
    
]
license = {file = "LICENSE"}
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "logik.__version__"}

[project.optional-dependencies]
test = [
    "pytest <= 9.0.2",
    "pytest-timeout <= 2.4.0",
    "flake8 <= 7.3.0"
]
docs = [
    "Sphinx <= 9.1.0",
    "sphinx-rtd-theme <= 3.1.0",
    "autodocsumm == 0.2.14"
]

[tool.setuptools]
include-package-data = true
packages = [
    "logik"
]

[tool.pytest.ini_options]
testpaths = "tests"
timeout = "180"
markers = [
    "quick: always run this test on push"
]
