[build-system]
requires = [
    "setuptools >= 61.2",
    "setuptools_scm[toml] >= 6.2"
]

build-backend = "setuptools.build_meta"


[project]
name = "logik"
authors = [{name = "Zero ASIC"}]
description = "Logik is a light weight FPGA tool chain based on mature open source technologies."
readme = "README.md"
urls = {Homepage = "https://github.com/siliconcompiler/logik"}
requires-python = ">= 3.10"
dependencies = [
    # Use ~= to allow users to pull in bug fixes and compatible future releases (>= current, < next minor)
    "logiklib ~= 0.2.0",
    "siliconcompiler ~= 0.37.2"
]
license = {file = "LICENSE"}
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "logik.__version__"}

[project.scripts]
logik = "logik.cli:run_logik"

[project.optional-dependencies]
test = [
    "pytest == 9.0.2",
    "pytest-timeout >= 2.0.0",
    "flake8 >= 7.3.0"
]
docs = [
    "Sphinx >= 6.0.0",
    "sphinx-rtd-theme >= 1.0.0",
    "autodocsumm >= 0.2.14"
]

[tool.setuptools]
include-package-data = true
packages = [
    "logik"
]

[tool.pytest.ini_options]
testpaths = "tests"
timeout = "180"
markers = [
    "quick: always run this test on push"
]
